@@ -1,4 +1,4 @@
-Changes applied to the gmp-6.0.6/ tree as obtained from:
+Changes applied to the gmp-6.0.0/ tree as obtained from:
 	http://ftp.gnu.org/gnu/gmp/
 
 Removed:
